--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Ceci est notre première class bootstrap v5.3</h1>
+    <h1>Changer la couleur de nos text et le fond</h1>
+    <h2 class="text-danger bg-black">Hello World</h2>
+    <p class="text-info bg-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Architecto accusamus nisi, dignissimos a repellendus quae! Ullam,
+        beatae maxime. Pariatur, vel!
+    </p>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
