--- a/index.html
+++ b/index.html
@@ -6,14 +6,29 @@
     <title>Tuto Bootstrap v5.3</title>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/bootstrap-v5.3/css/bootstrap.min.css">
+    <style>
+        .customize-color{
+            color: brown !important;
+            background: burlywood !important;
+        }
+    </style>
 </head>
 <body>
     <h1>Ceci est notre première class bootstrap v5.3</h1>
+
     <h1>Changer la couleur de nos text et le fond</h1>
     <h2 class="text-danger bg-black">Hello World</h2>
     <p class="text-info bg-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Architecto accusamus nisi, dignissimos a repellendus quae! Ullam,
         beatae maxime. Pariatur, vel!
+    </p>
+
+    <h1>Varié la couleur du text et du fond</h1>
+    <p class="text-info bg-black customize-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus amet sequi,
+        recusandae harum laboriosam ab maiores at eos odit rerum eaque provident, 
+        rem nobis libero saepe, porro id? Maxime quis officia dolor ea aliquid doloribus 
+        ducimus explicabo. Inventore expedita ea pariatur qui dolorum omnis ducimus? Corrupti 
+        nam sed mollitia id.
     </p>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
