Implémentation des grilles

--- a/index.html
+++ b/index.html
@@ -31,6 +31,64 @@
         nam sed mollitia id.
     </p>
 
+    <h1>grille avec les même colonne</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col bg-info">Un</div>
+            <div class="col bg-info">Deux</div>
+            <div class="col bg-info">Trois</div>
+        </div>
+    </div>
+
+    <h1>grille avec des tailles de colonne différente</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-danger">Un</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-success">Deux</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-dark">Trois</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-secondary">Quatre</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-danger">Cinq</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-primary">Six</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-danger">Sept</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-info">Huit</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-secondary">Neuf</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-danger">Dix</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-dark">Onze</div>
+            <div class="col-lg-3 col-md-4 col-sm-12 bg-primary">Douze</div>
+        </div>
+    </div>
+
+    <h1>grille avec des spaces</h1>
+    <div class="container-fluid">
+        <div class="row g-4">
+            <div class="col-4">
+                <div class="bg-primary">Custom 1</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 2</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 3</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 4</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 5</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 6</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 6</div>
+            </div>
+            <div class="col-4">
+                <div class="bg-primary">Custom 7</div>
+            </div>
+        </div>
+    </div>
+    <hr>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
