--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
     </div>
     <hr>
 
+    <p class="h1">Hello World</p>
+    <span class="h3">C'est un span</span>
+    <div class="display-6">C'est une div</div>
+    <div class="fw-bold">simple text</div>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
