--- a/index.html
+++ b/index.html
@@ -94,6 +94,12 @@
     <div class="display-6">C'est une div</div>
     <div class="fw-bold">simple text</div>
 
+    <h1>Les Images</h1>
+    <img src="./assets/imgs/01.jpg" class="float-start" height="400" width="400" alt="">
+    <img src="./assets/imgs/02.jpg" class="float-end" height="400" width="400" alt="">
+    <div class="text-center">
+        <img src="./assets/imgs/03.jpg" height="400" width="400" alt="">
+    </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
