Implémentation des tableaux

--- a/index.html
+++ b/index.html
@@ -100,6 +100,37 @@
     <div class="text-center">
         <img src="./assets/imgs/03.jpg" height="400" width="400" alt="">
     </div>
+
+    <h1>Les Tableaux</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>first</th>
+                <th>second</th>
+                <th>third</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th>1</th>
+                <th>Den</th>
+                <th>allen</th>
+                <th>joe</th>
+            </tr>
+            <tr>
+                <th>2</th>
+                <th>Den</th>
+                <th>allen</th>
+                <th>joe</th>
+            </tr>
+            <tr>
+                <th>3</th>
+                <th colspan="2">Den</th>
+                <th>joe</th>
+            </tr>
+        </tbody>
+    </table>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
