--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>Ceci est notre première class bootstrap v5.3</h1>
 
+    <hr>
     <h1>Changer la couleur de nos text et le fond</h1>
     <h2 class="text-danger bg-black">Hello World</h2>
     <p class="text-info bg-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -23,6 +24,7 @@
         beatae maxime. Pariatur, vel!
     </p>
 
+    <hr>
     <h1>Varié la couleur du text et du fond</h1>
     <p class="text-info bg-black customize-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus amet sequi,
         recusandae harum laboriosam ab maiores at eos odit rerum eaque provident, 
@@ -31,6 +33,7 @@
         nam sed mollitia id.
     </p>
 
+    <hr>
     <h1>grille avec les même colonne</h1>
     <div class="container-fluid">
         <div class="row">
@@ -40,6 +43,7 @@
         </div>
     </div>
 
+    <hr>
     <h1>grille avec des tailles de colonne différente</h1>
     <div class="container-fluid">
         <div class="row">
@@ -58,6 +62,7 @@
         </div>
     </div>
 
+    <hr>
     <h1>grille avec des spaces</h1>
     <div class="container-fluid">
         <div class="row g-4">
@@ -87,13 +92,14 @@
             </div>
         </div>
     </div>
-    <hr>
 
+    <hr>
     <p class="h1">Hello World</p>
     <span class="h3">C'est un span</span>
     <div class="display-6">C'est une div</div>
     <div class="fw-bold">simple text</div>
 
+    <hr>
     <h1>Les Images</h1>
     <img src="./assets/imgs/01.jpg" class="float-start" height="400" width="400" alt="">
     <img src="./assets/imgs/02.jpg" class="float-end" height="400" width="400" alt="">
@@ -101,6 +107,7 @@
         <img src="./assets/imgs/03.jpg" height="400" width="400" alt="">
     </div>
 
+    <hr>
     <h1>Les Tableaux</h1>
     <table class="table">
         <thead>
@@ -131,6 +138,17 @@
             </tr>
         </tbody>
     </table>
+
+    <hr>
+    <h1>Cas des Margin et Padding</h1>
+    <p class="bg-danger text-light fw-bold mt-lg-5 mt-md-3 mt-sm-0">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+        Nihil assumenda deleniti fugit dolor ea corporis ipsa unde 
+        sunt ullam ex, doloremque nemo dignissimos qui, recusandae 
+        ratione inventore. Praesentium impedit amet, nulla rerum 
+        consequatur eligendi ullam neque fuga cum voluptatibus incidunt 
+        sunt quia in adipisci suscipit fugit ipsam, numquam, culpa sed.
+    </p>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
