--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
         consequatur eligendi ullam neque fuga cum voluptatibus incidunt 
         sunt quia in adipisci suscipit fugit ipsam, numquam, culpa sed.
     </p>
+
+    <hr>
+    <h1>Formulaire: label et input</h1>
+    <form action="">
+        <div>
+            <label for="" class="form-label">Email</label>
+            <input type="email" name="" id="" placeholder="" class="form-control">
+        </div>
+        <div>
+            <label for="" class="form-label">Mot de passe</label>
+            <input type="password" name="" id="" class="form-control">
+        </div>
+        <input type="submit" value="Soumettre">
+    </form>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
