--- a/index.html
+++ b/index.html
@@ -163,6 +163,22 @@
         </div>
         <input type="submit" value="Soumettre">
     </form>
+
+    <hr>
+    <h1>Formulaireire: select</h1>
+    <select class="form-select form-select-lg">
+        <option selected>Sélectionnez</option>
+        <option value="1">Html</option>
+        <option value="2">Css</option>
+        <option value="3">Javascript</option>
+    </select>
+
+    <select class="form-select form-select-sm" size="6">
+        <option selected>Sélectionnez</option>
+        <option value="1">Html</option>
+        <option value="2">Css</option>
+        <option value="3">Javascript</option>
+    </select>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
