--- a/index.html
+++ b/index.html
@@ -179,6 +179,37 @@
         <option value="2">Css</option>
         <option value="3">Javascript</option>
     </select>
+
+    <hr>
+    <h1>Formulaire: checkbox</h1>
+    <div class="form-check">
+        <input type="checkbox" class="form-check-input">
+        <label for="">Defaut checkbox</label>
+    </div>
+    <div class="form-check">
+        <input type="checkbox" checked class="form-check-input">
+        <label for="">Checked checkbox</label>
+    </div>
+
+    <hr>
+    <h1>Formulaire: radio</h1>
+    <div class="form-check">
+        <input type="radio" class="form-check-input" name="input-radio">
+        <label for="">Defaut checkbox</label>
+    </div>
+    <div class="form-check">
+        <input type="radio" checked class="form-check-input" name="input-radio">
+        <label for="">Checked checkbox</label>
+    </div>
+
+    <div class="form-check form-switch">
+        <input type="radio" class="form-check-input" name="input-radio">
+        <label for="">Defaut checkbox</label>
+    </div>
+    <div class="form-check form-switch">
+        <input type="radio" checked class="form-check-input" name="input-radio">
+        <label for="">Checked checkbox</label>
+    </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
