--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./assets/bootstrap-v5.3/css/bootstrap.min.css">
     <style>
-        .customize-color{
+        .customize-color {
             color: brown !important;
             background: burlywood !important;
         }
     </style>
 </head>
+
 <body>
     <h1>Ceci est notre première class bootstrap v5.3</h1>
 
@@ -26,10 +28,11 @@
 
     <hr>
     <h1>Varié la couleur du text et du fond</h1>
-    <p class="text-info bg-black customize-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus amet sequi,
-        recusandae harum laboriosam ab maiores at eos odit rerum eaque provident, 
-        rem nobis libero saepe, porro id? Maxime quis officia dolor ea aliquid doloribus 
-        ducimus explicabo. Inventore expedita ea pariatur qui dolorum omnis ducimus? Corrupti 
+    <p class="text-info bg-black customize-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+        amet sequi,
+        recusandae harum laboriosam ab maiores at eos odit rerum eaque provident,
+        rem nobis libero saepe, porro id? Maxime quis officia dolor ea aliquid doloribus
+        ducimus explicabo. Inventore expedita ea pariatur qui dolorum omnis ducimus? Corrupti
         nam sed mollitia id.
     </p>
 
@@ -142,11 +145,11 @@
     <hr>
     <h1>Cas des Margin et Padding</h1>
     <p class="bg-danger text-light fw-bold mt-lg-5 mt-md-3 mt-sm-0">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-        Nihil assumenda deleniti fugit dolor ea corporis ipsa unde 
-        sunt ullam ex, doloremque nemo dignissimos qui, recusandae 
-        ratione inventore. Praesentium impedit amet, nulla rerum 
-        consequatur eligendi ullam neque fuga cum voluptatibus incidunt 
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Nihil assumenda deleniti fugit dolor ea corporis ipsa unde
+        sunt ullam ex, doloremque nemo dignissimos qui, recusandae
+        ratione inventore. Praesentium impedit amet, nulla rerum
+        consequatur eligendi ullam neque fuga cum voluptatibus incidunt
         sunt quia in adipisci suscipit fugit ipsam, numquam, culpa sed.
     </p>
 
@@ -210,7 +213,13 @@
         <input type="radio" checked class="form-check-input" name="input-radio">
         <label for="">Checked checkbox</label>
     </div>
+
+    <hr>
+    <h1>Formulaire: range</h1>
+    <label for="">Selectionner le range</label>
+    <input type="range" class="form-range" min="0" max="10" step="2">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
+
 </html>
