--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
     <h1>Formulaire: range</h1>
     <label for="">Selectionner le range</label>
     <input type="range" class="form-range" min="0" max="10" step="2">
+
+    <hr>
+    <h1>Formulaire: Autre modéle d'input</h1>
+    <div class="input-group mb-3">
+        <span class="input-group-text">Nom d'utilisateur</span>
+        <input type="text" placeholder="nom" class="form-control">
+    </div>
+    <div class="input-group">
+        <input type="text" class="form-control" placeholder="nom">
+        <span class="input-group-text">Email</span>
+    </div>
+    <label for="" class="form-label">Entrez votre id</label>
+    <div class="input-group">
+        <span class="input-group-text">Entrez votre URL</span>
+        <input type="text" placeholder="Lien de votre site" class="form-control">
+    </div>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
