--- a/index.html
+++ b/index.html
@@ -235,6 +235,67 @@
         <input type="text" placeholder="Lien de votre site" class="form-control">
     </div>
 
+    <hr>
+    <h1>Formulaire Complet</h1>
+    <div class="container-fluid">
+        <form action="" class="row g-3">
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <label for="" class="form-label">Nom d'utilisateur</label>
+                <input type="text" placeholder="Nom d'utilisateur" class="form-control">
+            </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <label for="" class="form-label">Mot de passe</label>
+                <input type="password" placeholder="Mot de passe" class="form-control">
+            </div>
+
+            <div class="col-12">
+                <label for="" class="form-label">Email</label>
+                <input type="email" class="form-control" placeholder="Email">
+            </div>
+
+            <div class="col-6">
+                <label for="">Adresse 1</label>
+                <input type="text" class="form-control" placeholder="Adresse 1">
+            </div>
+
+            <div class="col-6">
+                <label for="">Adresse 2</label>
+                <input type="text" class="form-control" placeholder="Adresse 2">
+            </div>
+
+            <div class="col-md-5">
+                <label for="">Ville</label>
+                <input type="text" class="form-control" placeholder="Ville">
+            </div>
+
+            <div class="col-md-4">
+                <label for="">Région</label>
+                <input type="text" class="form-control" placeholder="Région">
+            </div>
+
+            <div class="col-md-3">
+                <label for="">Code postal</label>
+                <input type="text" class="form-control" placeholder="Code postal">
+            </div>
+
+            <div class="col-12">
+                <input type="submit" value="Soumettre" class="form-control">
+            </div>
+        </form>
+    </div>
+
+    <hr>
+    <h1>Formulaire: input flottante</h1>
+    <div class="form-floating mb-3">
+        <input type="text" class="form-control" placeholder="Nom">
+        <label for="">Nom</label>
+    </div>
+    <div class="form-floating">
+        <input type="text" class="form-control" placeholder="Mot de passe">
+        <label for="">Mot de passe</label>
+    </div>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
