--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
     <hr>
     <h1>Formulaireire: select</h1>
-    <select class="form-select form-select-lg">
+    <select class="form-select form-select-lg ">
         <option selected>Sélectionnez</option>
         <option value="1">Html</option>
         <option value="2">Css</option>
@@ -294,6 +294,44 @@
     <div class="form-floating">
         <input type="text" class="form-control" placeholder="Mot de passe">
         <label for="">Mot de passe</label>
+    </div>
+
+    <hr>
+    <h1>Alerte</h1>
+    <div class="alert alert-danger">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-primary">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-secondary">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-info">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-success">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-dark">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
+    </div>
+    <div class="alert alert-warning">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Sit maiores facere, quasi est fugit quaerat perspiciatis 
+        porro culpa dolore ullam illum molestiae, doloremque modi.
     </div>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
