Implémentation d'un button

--- a/index.html
+++ b/index.html
@@ -334,6 +334,14 @@
         porro culpa dolore ullam illum molestiae, doloremque modi.
     </div>
 
+    <hr>
+    <h1>Boutton</h1>
+    <div>
+        <button class="btn btn-primary">Submit</button>
+        <button class="btn btn-info">Submit</button>
+        <button class="btn btn-success">Submit</button>
+    </div>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
