--- a/index.html
+++ b/index.html
@@ -342,6 +342,13 @@
         <button class="btn btn-success">Submit</button>
     </div>
 
+    <hr>
+    <h1>Badge</h1>
+    <h2>Hello <span class="badge bg-danger">world</span></h2>
+    <button class="btn btn-outline-info">
+        Success <span class="badge bg-info">fail</span>
+    </button>
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
