--- a/index.html
+++ b/index.html
@@ -349,6 +349,56 @@
         Success <span class="badge bg-info">fail</span>
     </button>
 
+    <hr>
+    <h1>Carte</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card" style="width: 300px;">
+                <div class="card-header">La tête</div>
+                <img src="./assets/imgs/02.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h1>courses</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Tempora magni nam non officiis laborum excepturi eius adipisci! 
+                        Dolorem, aperiam? Necessitatibus, fugit odio. Saepe iure a vitae 
+                        praesentium sapiente? Adipisci, debitis!
+                    </p>
+                    <button type="button" class="btn btn-outline-secondary">Acheter</button>
+                </div>
+                <div class="card-footer">le pied</div>
+            </div>
+            <div class="card" style="width: 300px;">
+                <div class="card-header">La tête</div>
+                <img src="./assets/imgs/02.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h1>courses</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Tempora magni nam non officiis laborum excepturi eius adipisci! 
+                        Dolorem, aperiam? Necessitatibus, fugit odio. Saepe iure a vitae 
+                        praesentium sapiente? Adipisci, debitis!
+                    </p>
+                    <button type="button" class="btn btn-outline-secondary">Acheter</button>
+                </div>
+                <div class="card-footer">le pied</div>
+            </div>
+            <div class="card" style="width: 300px;">
+                <div class="card-header">La tête</div>
+                <img src="./assets/imgs/02.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h1>courses</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Tempora magni nam non officiis laborum excepturi eius adipisci! 
+                        Dolorem, aperiam? Necessitatibus, fugit odio. Saepe iure a vitae 
+                        praesentium sapiente? Adipisci, debitis!
+                    </p>
+                    <button type="button" class="btn btn-outline-secondary">Acheter</button>
+                </div>
+                <div class="card-footer">le pied</div>
+            </div>
+        </div>
+    </div>
+    
+
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
 </body>
