--- a/index.html
+++ b/index.html
@@ -398,6 +398,35 @@
         </div>
     </div>
     
+    <hr>
+    <h1>Carrousel</h1>
+    <div id="carouselExampleindicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleindicators" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#carouselExampleindicators" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carouselExampleindicators" data-bs-slide-to="2"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="./assets/imgs/01.jpg" alt="" width="400" height="600" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/imgs/02.jpg" alt="" width="400" height="600" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="./assets/imgs/03.jpg" alt="" width="400" height="600" class="d-block w-100">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleindicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleindicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
