--- a/index.html
+++ b/index.html
@@ -426,10 +426,41 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+
+    <hr>
+    <h1>navBar</h1>
+    <nav class="navbar navbar-expand-lg navbar-light"> 
+        <div class="container-fluid">
+            <a href="" class="navbar-brand">Meta Brains</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbartab">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="navbartab">
+                <ul class="navbar-nav ms-auto me-5">
+                    <li class="nav-item"><a href="" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">Pages</a></li>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle" id="menudropdown" data-bs-toggle="dropdown">
+                            Menu
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="" class="dropdown-item">Menu 1</a></li>
+                            <li><a href="" class="dropdown-item">Menu 2</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a href="" class="dropdown-item">Menu 3</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="" class="nav-link">Contact us</a></li>
+                    <li class="nav-item"><a href="" class="nav-link">privacy</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/bootstrap-v5.3/js/bootstrap.min.js"></script>
+    <script src="./assets/bootstrap-v5.3/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
